--- a/index.html
+++ b/index.html
@@ -1,1 +1,4 @@
 <h1>Alex's Page of Cool Stuff on the Internet</h1>
+
+<p>This is a page free of all css or javascript where I collect cool things on the internet</p>
+
